--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div class="key">
         KeyA
         <small>event.code</small>
-      </div>
+      </div> <br/>
       <div class="key">
         Press any key to get the keyCode
       </div>
